# mlr

./: CMakeLists.txt  MovingLinearRegression.h  MultipleLinearRegression.h  README.md  Utils.h  main.cpp
app/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  MultipleLinearRegressionTest.cpp
